fix(css): explicitly set table text align

--- a/_css/root/news.css
+++ b/_css/root/news.css
@@ -1,3 +1,8 @@
 .news td:first-of-type {
   font-weight: var(--font-weight-thick);
 }
+
+.news th,
+.news td {
+  text-align: left;
+}
